tests/negative/b1_line_number.lator
-- header comment
x is 5 -- trailing comment


x is 6
